# loki_setup

./: .gitignore  BUGS  CHANGES  ChangeLog  Makefile  Makefile.in  Patches  README  README.carbon  README.locale  README.loki_uninstall  README.md  README.plugins  README.xml  README.xsu  autogen.sh  autorun.c  bools.c  bools.h  carbon_ui.c  check.c  check.glade  check.gtk2.glade  check_carbon.c  config.guess  config.h.in  config.sub  configure.in  console_ui.c  copy.c  copy.h  cpio.h  detect.c  detect.h  dialog_ui.c  file.c  file.h  gtk_ui.c  icon.xpm  install.c  (+34 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
carbon/: Info.plist.check  Info.plist.uninstall  STUPControl.c  STUPControl.h  YASTControl.c  YASTControl.h  appbundle.c  appbundle.h  carbondebug.c  carbondebug.h  carbonres.c  carbonres.h
dialog/: CHANGES  Makefile.in  README  VERSION  arrows.c  buttons.c  calendar.c  checklist.c  colors.h  dialog.c  dialog.h  dialog.lsm  fselect.c  gauge.c  inputbox.c  inputstr.c  menubox.c  mouse.c  mousewget.c  msgbox.c  rc.c  tailbox.c  textbox.c  timebox.c  ui_getc.c  util.c  yesno.c
extras/: makedesktop.sh
image/: autorun.inf  setup.sh
image/setup.data/: setup.glade  setup.gtk2.glade  setup.xml
image/setup.data/locale/de/LC_MESSAGES/: loki-uninstall.mo  setup.mo
image/setup.data/locale/en_GB/LC_MESSAGES/: loki-uninstall.mo  setup.mo
image/setup.data/locale/es/LC_MESSAGES/: loki-uninstall.mo  setup.mo
image/setup.data/locale/fr/LC_MESSAGES/: loki-uninstall.mo  setup.mo
image/setup.data/locale/it/LC_MESSAGES/: loki-uninstall.mo  setup.mo
image/setup.data/locale/nl/LC_MESSAGES/: loki-uninstall.mo  setup.mo
image/setup.data/locale/ru/LC_MESSAGES/: loki-uninstall.mo
image/setup.data/locale/sv/LC_MESSAGES/: loki-uninstall.mo  setup.mo
image/win32/: README.htm
plugins/: Makefile  Makefile.in  cpio.c  cpio.h  plugindefs.h  rar.c  rpm.c  sample.c  tar.c  uz2.c  zip.c
po/: loki-uninstall.po  setup.po
po/de/: loki-uninstall.po  setup.po
po/en_GB/: loki-uninstall.po  loki_uninstall.po  setup.po
po/es/: loki-uninstall.po  setup.po
po/fr/: loki-uninstall.po  setup.po
po/it/: loki-uninstall.po  setup.po
po/nl/: loki-uninstall.po  setup.po
po/ru/: loki-uninstall.po  setup.po
po/sv/: loki-uninstall.po  setup.po
setup.APP/Contents/: Info.plist
setup.APP/Contents/Resources/carbon_ui.nib/: info.nib  objects.xib
unrar/: README.loki_setup
